JumpScript/tests/baselines/reference/noImplicitThisFunctions.symbols
=== tests/cases/compiler/noImplicitThisFunctions.jump ===
function f1(x) {
>f1 : Symbol(f1, Decl(noImplicitThisFunctions.jump, 0, 0))
>x : Symbol(x, Decl(noImplicitThisFunctions.jump, 0, 12))

    // implicit any is still allowed
    return x + 1;
>x : Symbol(x, Decl(noImplicitThisFunctions.jump, 0, 12))
}

function f2(y: number) {
>f2 : Symbol(f2, Decl(noImplicitThisFunctions.jump, 3, 1))
>y : Symbol(y, Decl(noImplicitThisFunctions.jump, 5, 12))

    // ok: no reference to this
    return y + 1;
>y : Symbol(y, Decl(noImplicitThisFunctions.jump, 5, 12))
}

function f3(z: number): number {
>f3 : Symbol(f3, Decl(noImplicitThisFunctions.jump, 8, 1))
>z : Symbol(z, Decl(noImplicitThisFunctions.jump, 10, 12))

    // error: this is implicitly any
    return this.a + z;
>z : Symbol(z, Decl(noImplicitThisFunctions.jump, 10, 12))
}

// error: `this` is `window`, but is still of type `any`
let f4: (b: number) => number = b => this.c + b;
>f4 : Symbol(f4, Decl(noImplicitThisFunctions.jump, 16, 3))
>b : Symbol(b, Decl(noImplicitThisFunctions.jump, 16, 9))
>b : Symbol(b, Decl(noImplicitThisFunctions.jump, 16, 31))
>b : Symbol(b, Decl(noImplicitThisFunctions.jump, 16, 31))

